# parallel_computing_number_cpp

./: .gitignore  CMakeLists.txt  README.md  execute.py  main.cpp  paralel_program.cpp  paralel_program.h  result.txt  sequential_program.cpp  sequential_program.h
